# rtree

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  README.md  implementation.tex  package-lock.json
.cache/clangd/index/: box.h.AC5F43E6A1E8C995.idx  hilbert.h.8287689155E6FE69.idx  hilbert_curve.cpp.277CEC001C38AAD8.idx  hilbert_curve.h.394228A6A48D6E92.idx  main.cpp.9211B8F8CB38D4F0.idx  ranges.h.A435883E1D45EA84.idx  rtree.cpp.DD0FD484F3DB0BA7.idx  rtree.h.016F768293EA886A.idx  test_hilbert.cpp.AC68B6754DB8DC65.idx  test_rtree.cpp.68FBFFA5E852C232.idx
docs/html/: annotated.html  annotated_dup.js  box_8h.html  box_8h.js  box_8h__dep__incl.dot  box_8h__incl.dot  box_8h_source.html  classBox-members.html  classBox.html  classBox.js  classGutman_1_1RTree-members.html  classGutman_1_1RTree.html  classGutman_1_1RTree.js  classHilbertCurve-members.html  classHilbertCurve.html  classHilbertCurve.js  classRTreeTest-members.html  classRTreeTest.html  classRTreeTest.js  classRanges-members.html  classRanges.html  classRanges.js  classes.html  classhilbert_1_1RTree-members.html  classhilbert_1_1RTree.html  classhilbert_1_1RTree.js  dir_000001_000000.html  dir_000002_000000.html  dir_2ec6a636875c841caa52b319b93ad0d1.html  dir_2ec6a636875c841caa52b319b93ad0d1.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d12341206527dd4429579d7e1203fa23.html  dir_d12341206527dd4429579d7e1203fa23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+94 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  namespaces_0.js  namespaces_1.js  (+15 more)
docs/latex/: annotated.tex  box_8h.tex  box_8h.tex.tmp  box_8h__dep__incl.dot  box_8h__incl.dot  box_8h_source.tex  classBox.tex  classGutman_1_1RTree.tex  classHilbertCurve.tex  classRTreeTest.tex  classRanges.tex  classhilbert_1_1RTree.tex  dir_2ec6a636875c841caa52b319b93ad0d1.tex  dir_2ec6a636875c841caa52b319b93ad0d1_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d12341206527dd4429579d7e1203fa23.tex  dir_d12341206527dd4429579d7e1203fa23_dep.dot  dirs.tex  files.tex  hierarchy.tex  hilbert__curve_8cpp.tex  hilbert__curve_8cpp__incl.dot  hilbert__curve_8h.tex  hilbert__curve_8h__dep__incl.dot  hilbert__curve_8h__incl.dot  hilbert__curve_8h_source.tex  hilbert__rtree_8h.tex  hilbert__rtree_8h__incl.dot  hilbert__rtree_8h_source.tex  main_8cpp.tex  main_8cpp__incl.dot  namespaceGutman.tex  namespacehilbert.tex  namespaces.tex  ranges_8h.tex  ranges_8h__dep__incl.dot  ranges_8h__incl.dot  ranges_8h_source.tex  refman.aux  (+25 more)
src/: main.cpp
src/rtree/: rtree.cpp  rtree.h
src/rtree_hilbert/: box.h  hilbert.h  hilbert_curve.cpp  hilbert_curve.h  hilbert_rtree.h  ranges.h
tests/: CMakeLists.txt  test_hilb_rtree.cpp  test_hilbert.cpp  test_rtree.cpp
